@@ -4,6 +4,7 @@ Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
     - fix Role::ObjectMethods abstract and list_$object documentation
     - fix skipping of api.t when environment variables aren't set
     - use Carp::Clan for better error reporting
+    - add discard method
 
 0.001001  2019-04-12 13:44:14+02:00 Europe/Vienna
     - Initial release using the JSON REST API version 1
